--- a/index.html
+++ b/index.html
@@ -149,37 +149,47 @@
           <img src="1.jpg" class="d-block" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="2.jpg" class="d-block" alt="..." />
+           <img src="3.jpg" class="d-block" alt="..." />
+        
         </div>
         <div class="carousel-item">
-          <img src="3.jpg" class="d-block" alt="..." />
+           <img src="mar-24.png" class="d-block" alt="..." />
+        
         </div>
         <div class="carousel-item">
           <img src="april-24a.jpg" class="d-block" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="aug-24a.png" class="d-block" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="dec-24a.jpg" class="d-block" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="june-24a.jpg" class="d-block" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="mar-24.png" class="d-block" alt="..." />
-        </div>
-        <div class="carousel-item">
           <img src="may-24a.png" class="d-block" alt="..." />
+<!--           <img src="aug-24a.png" class="d-block" alt="..." /> -->
+        </div>
+        <div class="carousel-item">
+           <img src="june-24a.jpg" class="d-block" alt="..." />
+<!--           -->
+        </div>
+        <div class="carousel-item">
+          <img src="2.jpg" class="d-block" alt="..." />
+<!--           <img src="june-24a.jpg" class="d-block" alt="..." /> -->
+        </div>
+        <div class="carousel-item">
+            <img src="aug-24a.png" class="d-block" alt="..." />
+<!--             <img src="2.jpg" class="d-block" alt="..." /> -->
+        </div>
+        <div class="carousel-item">
+           <img src="sept-24a.png" class="d-block" alt="..." />
+<!--           <img src="may-24a.png" class="d-block" alt="..." /> -->
+        </div>
+        <div class="carousel-item">
+            <img src="oct-24a.png" class="d-block" alt="..." />
+<!--           <img src="nov-24a.png" class="d-block" alt="..." /> -->
         </div>
         <div class="carousel-item">
           <img src="nov-24a.png" class="d-block" alt="..." />
+<!--           <img src="oct-24a.png" class="d-block" alt="..." /> -->
         </div>
         <div class="carousel-item">
-          <img src="oct-24a.png" class="d-block" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="sept-24a.png" class="d-block" alt="..." />
+           <img src="dec-24a.jpg" class="d-block" alt="..." />
+<!--           <img src="sept-24a.png" class="d-block" alt="..." /> -->
         </div>
       </div>
       <button
