--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="#">About Us</a>
             </li>
           </ul>
-          <form class="d-flex">
+<!--           <form class="d-flex">
             <input
               class="form-control me-2"
               type="search"
@@ -58,7 +58,7 @@
             <button class="btn btn-outline-success" type="submit">
               Search
             </button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
